crates/nash-report/tests/can/snapshots/can__module__tests__scope_recovery_after_rejected_shadowing.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf outer =\n    case outer of\n        outer -> outer\n        next -> unknown\n"
info: diagnostic
---
nash::names::shadowing

  × Name `outer` is already defined.
   ╭─[src/Main.nash:5:9]
 2 │ 
 3 │ f outer =
   ·   ──┬──
   ·     ╰── first defined here
 4 │     case outer of
 5 │         outer -> outer
   ·         ──┬──
   ·           ╰── shadows this name
 6 │         next -> unknown
   ╰────
  help: Rename one of these bindings.

nash::names::not_found_var

  × Unknown variable `unknown`.
   ╭─[src/Main.nash:6:17]
 5 │         outer -> outer
 6 │         next -> unknown
   ·                 ───────
   ╰────
  help: Similar names:

            next
            f
            outer
