crates/nash-report/tests/can/snapshots/can__module__tests__to_public_union_open_passes_through.snap
---
source: crates/nash-can/src/module.rs
---
Some(
    InterfaceUnion {
        kind: Type,
        context: [],
        name: "Bool",
        parameters: [],
        ctors: [],
        alternatives: 2,
        options: Enum,
        visibility: Open,
    },
)
