crates/nash-report/tests/can/snapshots/can__module__tests__typed_def_through_parameterized_alias.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias transform 'a = 'a -> 'a\n\nf : transform (List 'b)\nf x = x\n"
---
Module {
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 7,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: TypedDef {
            context: [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "Big",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 21,
                                },
                                end: Position {
                                    line: 5,
                                    column: 23,
                                },
                            },
                            value: Var(
                                "b",
                            ),
                        },
                    ],
                },
            ],
            annotation: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 5,
                    },
                    end: Position {
                        line: 5,
                        column: 24,
                    },
                },
                value: Alias {
                    reference: QualifiedName {
                        home: ModuleName {
                            package: None,
                            name: "Main",
                        },
                        name: "transform",
                    },
                    arguments: [
                        AliasArgument {
                            name: "a",
                            typ: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 16,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 23,
                                    },
                                },
                                value: Named {
                                    reference: QualifiedName {
                                        home: ModuleName {
                                            package: Some(
                                                PackageName {
                                                    author: "nash",
                                                    project: "core",
                                                },
                                            ),
                                            name: "Builtin",
                                        },
                                        name: "List",
                                    },
                                    args: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 5,
                                                    column: 21,
                                                },
                                                end: Position {
                                                    line: 5,
                                                    column: 23,
                                                },
                                            },
                                            value: Var(
                                                "b",
                                            ),
                                        },
                                    ],
                                },
                            },
                        },
                    ],
                    remaining: [],
                    target: Open(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 27,
                                },
                                end: Position {
                                    line: 3,
                                    column: 35,
                                },
                            },
                            value: Lambda {
                                from: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 27,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 29,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                                to: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 33,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 35,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            },
                        },
                    ),
                },
            },
            name: Located {
                region: Region {
                    start: Position {
                        line: 6,
                        column: 1,
                    },
                    end: Position {
                        line: 6,
                        column: 2,
                    },
                },
                value: "f",
            },
            free_vars: [
                "b",
            ],
            args: [
                TypedPattern {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 6,
                                column: 3,
                            },
                            end: Position {
                                line: 6,
                                column: 4,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                    typ: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 16,
                            },
                            end: Position {
                                line: 5,
                                column: 23,
                            },
                        },
                        value: Named {
                            reference: QualifiedName {
                                home: ModuleName {
                                    package: Some(
                                        PackageName {
                                            author: "nash",
                                            project: "core",
                                        },
                                    ),
                                    name: "Builtin",
                                },
                                name: "List",
                            },
                            args: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 21,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 23,
                                        },
                                    },
                                    value: Var(
                                        "b",
                                    ),
                                },
                            ],
                        },
                    },
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 6,
                        column: 7,
                    },
                    end: Position {
                        line: 6,
                        column: 8,
                    },
                },
                value: VarLocal(
                    "x",
                ),
            },
            typ: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 16,
                    },
                    end: Position {
                        line: 5,
                        column: 23,
                    },
                },
                value: Named {
                    reference: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "List",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 21,
                                },
                                end: Position {
                                    line: 5,
                                    column: 23,
                                },
                            },
                            value: Var(
                                "b",
                            ),
                        },
                    ],
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 5,
                    column: 1,
                },
            },
            value: Alias {
                kind: Arrow(
                    Type,
                    Type,
                ),
                context: [],
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 12,
                        },
                        end: Position {
                            line: 3,
                            column: 21,
                        },
                    },
                    value: "transform",
                },
                parameters: [
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 27,
                        },
                        end: Position {
                            line: 3,
                            column: 35,
                        },
                    },
                    value: Lambda {
                        from: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 27,
                                },
                                end: Position {
                                    line: 3,
                                    column: 29,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                        to: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 33,
                                },
                                end: Position {
                                    line: 3,
                                    column: 35,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    },
                },
            },
        },
    ],
    binops: [],
}
