crates/nash-report/tests/can/snapshots/can__module__tests__unknown_trait_in_context.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nid : Eq 'a => 'a -> 'a\nid x = x\n"
info: diagnostic
---
nash::names::not_found_trait

  × Unknown trait `Eq`.
   ╭─[src/Main.nash:3:6]
 2 │ 
 3 │ id : Eq 'a => 'a -> 'a
   ·      ──
 4 │ id x = x
   ╰────
  help: Define or import this name.
