crates/nash-report/tests/can/snapshots/can__module__tests__unused_case_branch_var.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Maybe exposing (Maybe(..))\n\nf x =\n    case x of\n        Just y -> 1\n        Nothing -> 0\n"
info: diagnostic
---
nash::warning::unused_variable

  ⚠ Unused variable `y`.
   ╭─[src/Main.nash:7:14]
 6 │     case x of
 7 │         Just y -> 1
   ·              ─
 8 │         Nothing -> 0
   ╰────
  help: Replace `y` with `_`.
