crates/nash-report/tests/can/snapshots/can__module__tests__value_and_function_in_cycle.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nx = f 1\n\nf a = x\n"
---
Module {
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: DeclareRec {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 3,
                        },
                        end: Position {
                            line: 5,
                            column: 4,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 7,
                    },
                    end: Position {
                        line: 5,
                        column: 8,
                    },
                },
                value: VarTopLevel(
                    QualifiedName {
                        home: ModuleName {
                            package: None,
                            name: "Main",
                        },
                        name: "x",
                    },
                ),
            },
        },
        following: [
            Def {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 1,
                        },
                        end: Position {
                            line: 3,
                            column: 2,
                        },
                    },
                    value: "x",
                },
                args: [],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 5,
                        },
                        end: Position {
                            line: 3,
                            column: 8,
                        },
                    },
                    value: Call {
                        function: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 5,
                                },
                                end: Position {
                                    line: 3,
                                    column: 6,
                                },
                            },
                            value: VarTopLevel(
                                QualifiedName {
                                    home: ModuleName {
                                        package: None,
                                        name: "Main",
                                    },
                                    name: "f",
                                },
                            ),
                        },
                        arguments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 7,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 8,
                                    },
                                },
                                value: Int(
                                    1,
                                ),
                            },
                        ],
                    },
                },
            },
        ],
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
